fix menu subpanel overflow

--- a/smk-parent/smk-client/src/main/javascript/smk/sidepanel/sidepanel.css
+++ b/smk-parent/smk-client/src/main/javascript/smk/sidepanel/sidepanel.css
@@ -52,6 +52,7 @@
     margin-bottom: 5px;
     padding-left: 4px;
     padding-top: 5px;
+    flex-shrink: 0;
 }
 
 .smk-sidepanel .smk-panel .smk-body {
